[workspace]
members = ["ext/tokenizers"]

[profile.release]
strip = true

[patch.crates-io]
magnus-macros = { git = "https://github.com/matsadler/magnus" }
number_prefix = { git = "https://github.com/ankane/rust-number-prefix", branch = "license-file" }
rb-sys-build = { git = "https://github.com/oxidize-rb/rb-sys" }
rb-sys-env = { git = "https://github.com/oxidize-rb/rb-sys" }
tokenizers = { git = "https://github.com/huggingface/tokenizers" }
