[package]
name = "tokenizers"
version = "0.6.1"
license = "Apache-2.0"
authors = ["Andrew Kane <andrew@ankane.org>"]
edition = "2021"
rust-version = "1.63.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
ahash = { version = "0.8.11", features = ["serde"] }
magnus = "0.8"
onig = { version = "6", default-features = false }
serde = { version = "1", features = ["rc", "derive"] }

[dependencies.tokenizers]
version = "=0.22.1" # also update in from_pretrained.rb
default-features = false
features = ["progressbar", "onig", "esaxx_fast"]
